<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/recipe_app"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/what_are_you_in_the_mood_for"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/italianRad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/italian"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/chineseRad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chinese"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/mexicanRad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mexican"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/indianRad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/indian"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/thaiRad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thai"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/randomRad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/random2"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/selectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/select2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outputSelect" />

    <TextView
        android:id="@+id/outputSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/selection2"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>